Version: 1.2.4
Date: 09.09.2023
  Bugfixes:
    - Fixed Bobs compatibility: Removed obsolete recipe and technology changes which did not apply to recent bob versions anymore.
    - Fixed Bobs compatibility: Fixed many technology dependencies.
    - Fixed Bobs + Angels compatibility: Fixed low density technology dependency.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 06.04.2023
  Changes:
    - IR3 compatibility: Changed oxygen barrel recipe to require oxygen as well
  Bugfixes:
    - Fixed IR3 compatibility with nuclear fuel by adding a new recipe called "Spaceship Fuel"
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 27.03.2023
  Bugfixes:
    - Fixed a crash in recipe replacements in Krastorio2/Pyanodons compatibility
    - Fixed technology FTL D research costs for classic mode when using Bob mods
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 26.03.2023
  Features:
    - Added Krastorio2 integration
    - Added Pyanodons integration
  Changes:
    - Added all 5 basic science packs to SpaceX techs
    - Adapted bob technology FTL D research cost to new curve
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 22.03.2023
  Major Features:
    - First release of the forked version
    - Added a new stage
      - Requires to bring oxygen, fuel, water and ai companions to the spaceship.
      - A space map has to be created to find a destination.
      - Adds a few more technologies, new recipes and a new satellite that returns an item required to craft the space map.
  Features:
    - Added startup option to split combinator signal output. If enabled:
      - Exisiting combinator will output the required item for the current stage only