@@ -14,6 +14,51 @@ if not noSpace then
 	ftl.unit.count = ftl.unit.count / 2
 end
 
+if data.raw.technology["space-construction"] then
+	data.raw.technology["space-construction"].prerequisites = { "space-assembly", "kr-advanced-solar-panel", "kr-ai-core" }
+end
+if data.raw.technology["space-casings"] then
+	table.insert(data.raw.technology["space-casings"].prerequisites, "kr-imersium-processing")
+end
+if data.raw.technology["space-thrusters"] then
+	table.insert(data.raw.technology["space-thrusters"].prerequisites, "kr-steel-fluid-handling")
+	table.insert(data.raw.technology["space-thrusters"].prerequisites, "kr-advanced-additional-engine")
+end
+if data.raw.technology["fuel-cells"] then
+	data.raw.technology["fuel-cells"].prerequisites = { "space-construction", "kr-fusion-energy" }
+end
+if data.raw.technology["life-support-systems"] then
+	table.insert(data.raw.technology["life-support-systems"].prerequisites, "kr-steel-fluid-handling")
+	table.insert(data.raw.technology["life-support-systems"].prerequisites, "kr-greenhouse")
+end
+if data.raw.technology["exploration-satellite"] then
+	data.raw.technology["exploration-satellite"].prerequisites = { "ftl-propulsion", "space-thrusters", "kr-fusion-energy" }
+end
+if data.raw.technology["space-fluid-tanks"] then
+	data.raw.technology["space-fluid-tanks"].prerequisites = {
+		"ftl-propulsion", "kr-steel-fluid-tanks", "kr-fusion-energy"
+	}
+end
+if data.raw.technology["space-ai-robots"] then
+	data.raw.technology["space-ai-robots"].prerequisites = {
+		"ftl-propulsion",
+		"kr-advanced-exoskeleton-equipment",
+		"belt-immunity-equipment",
+		"kr-battery-mk3-equipment",
+		"kr-power-armor-mk3",
+		"fusion-reactor-equipment",
+		"advanced-radar",
+		"kr-personal-laser-defense-mk3-equipment",
+		"personal-roboport-mk2-equipment",
+	}
+end
+if data.raw.technology["laser-cannon"] then
+	data.raw.technology["laser-cannon"].prerequisites = { "space-construction", "circuit-network", "kr-laser-artillery-turret" }
+end
+if data.raw.technology["protection-fields"] then
+	data.raw.technology["protection-fields"].prerequisites = { "space-construction", "kr-energy-shield-mk3-equipment" }
+end
+
 if not classicMode then
 	if not noSpace then
 		local sc = data.raw.technology["space-cartography"]
