@@ -5,6 +5,7 @@ Date: 09.09.2023
     - Fixed Bobs compatibility: Removed obsolete recipe and technology changes which did not apply to recent bob versions anymore.
     - Fixed Bobs compatibility: Fixed many technology dependencies.
     - Fixed Bobs + Angels compatibility: Fixed low density technology dependency.
+    - Fixed Krastorio2 compatibility: Added many missing technology dependencies.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: 06.04.2023
